Fix some css and add final img. Just need to fix header bar on mobile

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -78,7 +78,8 @@ code {
 }
 
 .slant {
-  transform: skewY(-.3deg);
+  transform: skewY(.5deg);
+  max-width: 900px;
 }
 
 hr {
